--- a/styles/style.css
+++ b/styles/style.css
@@ -6,26 +6,321 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background: #f2f2f2;
+  margin: 0;
+  position: relative;
+  display: flex;
+  align-items: center;
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  width: 228px;
+  height: 32px;
+  z-index: 2;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.header * {
+  margin: 0;
+  padding: 0;
+}
+
+.header__title {
+  font-size: 102px;
+  font-weight: 600;
+  line-height: 96px;
+  width: 730px;
+  margin-left: 64px;
+  z-index: 2;
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 2;
+}
+
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 0;
+}
+.description {
+  display: flex;
+}
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: 100px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.two-columns__brief {
+  font-size: 18px;
+  width: 175px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #2f80ed;
+  margin: 0;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  margin: 0;
+}
+.two-columns__paragraph:first-child {
+  margin: 0;
+}
+
+.two-columns__paragraph:nth-child(2) {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.two-columns__paragraph:last-child {
+  margin: 0;
+}
+
+.two-columns__span-accent {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 600;
+}
+
+.digits {
+  overflow: auto;
+}
+
+.digits__title {
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.15;
+  text-align: center;
+  margin: 100px auto 0 auto;
+  width: 60%;
+}
+
+.digits__section-subtitle {
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  text-align: center;
+  margin: 20px auto 0 auto;
+  width: 60%;
+}
+.table {
+  width: 1100px;
+  margin: 60px auto 100px auto;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+  list-style: none;
+  width: 250px;
+  margin-bottom: 60px;
+}
+
+.table__heading {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+}
+
+.table__text {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.feynman {
+  height: 890px;
+  background-color: #f2f2f2;
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+}
+
+.feynman__title {
+  font-size: 120px;
+  font-weight: 600;
+  line-height: 1.15;
+  width: 648px;
+  margin: 100px;
+}
+
+.feyman__subtitle {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+}
+
+.feynman__link {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  cursor: pointer;
+  text-decoration: none;
+  color: #2f80ed;
+}
+.feynman__main-illustration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 637px;
+  width: 867px;
+  z-index: -1;
+}
+
+.kaufman {
+  background-color: #000000;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  background-position: top right -210px;
+  background-size: 877px;
+  overflow: auto;
+}
+
+.kaufman__title {
+  color: white;
+  margin: 90px auto 0 auto;
+}
+.kaufman-subtitle_theme_dark {
+  color: white;
+}
+
+.table_theme_dark {
+  margin: 80px auto 90px auto;
+}
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.table__heading_theme_dark {
+  text-align: start;
+  margin: 0;
+}
+.table__text_theme_dark {
+  margin: 20px auto 0 auto;
+}
+
+.footer {
+  display: flex;
+  min-height: 350px;
+  background-color: #000000;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+  color: white;
+  margin: 60px auto 40px auto;
+  position: relative;
+}
+
+.logo_place_footer {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.footer__author {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  margin: 18px 0 18px 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+}
+
+.footer__column-heading {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.footer__column-link {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0 16px 0;
+}
+
+.footer__column-links {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  font-size: larger;
 }
