--- a/styles/style.css
+++ b/styles/style.css
@@ -33,17 +33,12 @@
   left: 64px;
 }
 
-.header * {
-  margin: 0;
-  padding: 0;
-}
-
 .header__title {
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
   width: 730px;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   z-index: 2;
 }
 
@@ -56,6 +51,7 @@
   font-size: 18px;
   font-weight: normal;
   z-index: 2;
+  margin: 0;
 }
 
 .header__link {
@@ -66,6 +62,7 @@
 .header__main-illustration {
   width: 765px;
   height: 608px;
+  object-fit: cover;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -87,9 +84,7 @@
   display: flex;
   justify-content: space-between;
   width: 80%;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-left: 100px;
+  margin: 100px auto 100px auto;
 }
 
 .two-columns__brief {
@@ -109,17 +104,13 @@
   font-weight: normal;
   margin: 0;
 }
-.two-columns__paragraph:first-child {
-  margin: 0;
-}
 
-.two-columns__paragraph:nth-child(2) {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.two-columns__paragraph {
+  margin: 0 0 30px 0;
 }
 
 .two-columns__paragraph:last-child {
-  margin: 0;
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
@@ -132,7 +123,7 @@
   overflow: auto;
 }
 
-.digits__title {
+.section-title {
   font-size: 60px;
   font-weight: 600;
   line-height: 1.15;
@@ -141,7 +132,7 @@
   width: 60%;
 }
 
-.digits__section-subtitle {
+.section-subtitle {
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
@@ -151,7 +142,7 @@
 }
 .table {
   width: 1100px;
-  margin: 60px auto 100px auto;
+  margin: 0 auto 100px auto;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
@@ -161,13 +152,14 @@
 .table__cell {
   list-style: none;
   width: 250px;
-  margin-bottom: 60px;
+  margin-top: 60px;
 }
 
 .table__heading {
   font-size: 24px;
   font-weight: 600;
   line-height: 1.15;
+  margin: 0;
 }
 
 .table__text {
@@ -179,16 +171,17 @@
 }
 
 .feynman {
-  height: 890px;
-  background-color: #f2f2f2;
   position: relative;
-
+  min-height: 890px;
+  background-color: #f2f2f2;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-position: bottom left;
+  background-size: 867px 637px;
 }
 
 .feynman__title {
@@ -196,16 +189,14 @@
   font-weight: 600;
   line-height: 1.15;
   width: 648px;
-  margin: 100px;
+  margin: 100px 0 0 0;
 }
 
-.feyman__subtitle {
+.feynman__subtitle {
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
-  margin: 0;
-  position: absolute;
-  top: 50%;
+  margin: 70px 0 0 0;
 }
 
 .feynman__link {
@@ -219,39 +210,41 @@
   text-decoration: none;
   color: #2f80ed;
 }
-.feynman__main-illustration {
+
+.kaufman {
+  position: relative;
+  background-color: #1f1f1f;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
   position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 637px;
-  width: 867px;
+  width: 877px;
+  height: 877px;
+  background-size: cover;
+  top: 0;
+  right: -210px;
   z-index: -1;
 }
 
-.kaufman {
-  background-color: #000000;
-  background-image: url(../images/kaufman-triangle.svg);
-  background-repeat: no-repeat;
-  background-position: top right -210px;
-  background-size: 877px;
-  overflow: auto;
-}
-
-.kaufman__title {
+.section-title_theme_dark {
   color: white;
   margin: 90px auto 0 auto;
 }
-.kaufman-subtitle_theme_dark {
+.section-subtitle_theme_dark {
   color: white;
 }
 
 .table_theme_dark {
-  margin: 80px auto 90px auto;
+  margin: 0 auto 90px auto;
 }
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-bottom: 80px;
+  margin-top: 80px;
 }
 
 .table__heading_theme_dark {
@@ -265,35 +258,41 @@
 .footer {
   display: flex;
   min-height: 350px;
-  background-color: #000000;
+  background-color: #1f1f1f;
 }
 
 .footer__columns {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 90%;
   color: white;
   margin: 60px auto 40px auto;
-  position: relative;
 }
 
-.logo_place_footer {
-  position: absolute;
-  top: 0;
-  left: 0;
+.footer__column {
+  display: flex;
+  flex-direction: column;
 }
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .footer__author {
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
   margin: 18px 0 18px 0;
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
 
-.footer__column_content_copyright {
-  flex-basis: 711px;
+.footer__column-links {
+  margin: 20px 0 16px 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column-heading {
@@ -304,12 +303,6 @@
 }
 
 .footer__column-link {
-  display: flex;
-  flex-direction: column;
-  margin: 20px 0 16px 0;
-}
-
-.footer__column-links {
   font-size: 18px;
   line-height: 30px;
   font-weight: normal;
