--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
-  width: 730px;
+  max-width: 730px;
   margin: 0 0 0 64px;
   z-index: 2;
 }
@@ -46,7 +46,7 @@
   position: absolute;
   left: 64px;
   bottom: 30px;
-  width: 388px;
+  max-width: 388px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -68,6 +68,7 @@
   right: 0;
   z-index: 1;
 }
+
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -77,9 +78,11 @@
   right: 0;
   z-index: 0;
 }
+
 .description {
   display: flex;
 }
+
 .two-columns {
   display: flex;
   justify-content: space-between;
@@ -89,7 +92,7 @@
 
 .two-columns__brief {
   font-size: 18px;
-  width: 175px;
+  max-width: 175px;
   line-height: 1.2;
   font-weight: normal;
   color: #2f80ed;
@@ -97,7 +100,7 @@
 }
 
 .two-columns__main-text {
-  width: 80%;
+  max-width: 80%;
   min-width: 784px;
   font-size: 24px;
   line-height: 34px;
@@ -129,7 +132,7 @@
   line-height: 1.15;
   text-align: center;
   margin: 100px auto 0 auto;
-  width: 60%;
+  max-width: 60%;
 }
 
 .section-subtitle {
@@ -138,8 +141,9 @@
   line-height: 34px;
   text-align: center;
   margin: 20px auto 0 auto;
-  width: 60%;
+  max-width: 60%;
 }
+
 .table {
   width: 1100px;
   margin: 0 auto 100px auto;
@@ -151,7 +155,8 @@
 
 .table__cell {
   list-style: none;
-  width: 250px;
+  max-width: 250px;
+  width: 100%;
   margin-top: 60px;
 }
 
@@ -188,7 +193,7 @@
   font-size: 120px;
   font-weight: 600;
   line-height: 1.15;
-  width: 648px;
+  max-width: 648px;
   margin: 100px 0 0 0;
 }
 
@@ -234,6 +239,7 @@
   color: white;
   margin: 90px auto 0 auto;
 }
+
 .section-subtitle_theme_dark {
   color: white;
 }
@@ -241,8 +247,9 @@
 .table_theme_dark {
   margin: 0 auto 90px auto;
 }
+
 .table__cell_theme_dark {
-  width: 200px;
+  max-width: 200px;
   color: white;
   margin-top: 80px;
 }
@@ -251,6 +258,7 @@
   text-align: start;
   margin: 0;
 }
+
 .table__text_theme_dark {
   margin: 20px auto 0 auto;
 }
@@ -264,7 +272,8 @@
 .footer__columns {
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  max-width: 90%;
+  width: 100%;
   color: white;
   margin: 60px auto 40px auto;
 }
