--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@
   display: flex;
   justify-content: space-between;
   width: 80%;
-  margin: 100px auto 100px auto;
+  margin: 100px auto 0 auto;
 }
 
 .two-columns__brief {
