--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -18,6 +19,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
 
@@ -78,6 +80,9 @@
   right: 0;
   z-index: 0;
 }
+.header__rotation {
+  animation: rotation 20s linear infinite;
+}
 
 .description {
   display: flex;
@@ -120,6 +125,117 @@
   font-size: 24px;
   line-height: 34px;
   font-weight: 600;
+}
+
+.techniques {
+  margin: 0 auto 0 auto ;
+  max-width: 80%;
+  overflow: auto;
+}
+.cards {
+  width: 920px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto 0 auto ;
+  padding: 0;
+}
+
+.cards__item {
+  text-align: center;
+  margin-left: 100px;
+  max-width: 240px;
+  width: 100%;
+  list-style: none;
+  margin-top: 60px;
+}
+.cards__item:first-child {
+  margin-left: 0;
+}
+
+.cards__item:nth-child(4) {
+  margin-left: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin: 0 40px 0 40px;
+}
+
+.cards__title {
+  margin-top: 43px;
+  margin-bottom: 0;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+}
+.cards__description {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: normal;
+  margin-top: 16px;
+  margin-bottom: 0;
+}
+/*.cards__description {
+  text-align: center;
+}*/
+.video {
+  margin-bottom: -50px;
+}
+.video__iframes {
+  display: flex;
+  justify-content: center;
+  margin: 50px auto 0 auto;
+}
+.video__iframe:last-child {
+  margin-left: 20px;
+}
+
+.oakley {
+  background-color: #f2f2f2;
+  padding-top: 60px;
+}
+
+.feynman {
+  position: relative;
+  min-height: 890px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: 867px 637px;
+}
+
+.feynman__title {
+  font-size: 120px;
+  font-weight: 600;
+  line-height: 1.15;
+  max-width: 648px;
+  margin: 100px 0 0 0;
+}
+
+.feynman__subtitle {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  margin: 70px 0 0 0;
+}
+
+.feynman__link {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  cursor: pointer;
+  text-decoration: none;
+  color: #2f80ed;
 }
 
 .digits {
@@ -175,46 +291,76 @@
   margin-bottom: 0;
 }
 
-.feynman {
-  position: relative;
-  min-height: 890px;
+.khan {
   background-color: #f2f2f2;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  background-image: url(../images/feynman.png);
-  background-repeat: no-repeat;
-  background-position: bottom left;
-  background-size: 867px 637px;
+  overflow: auto;
 }
 
-.feynman__title {
-  font-size: 120px;
+.khan__container {
+  max-width: 80%;
+  margin: 105px auto 0 auto;
+  text-align: left;
+
+}
+.khan__author {
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 42px;
+  margin: 0;
+}
+
+.khan__title {
+  font-size: 60px;
   font-weight: 600;
   line-height: 1.15;
-  max-width: 648px;
-  margin: 100px 0 0 0;
+  margin: 0;
 }
 
-.feynman__subtitle {
-  font-size: 36px;
+.khan__quote {
+  font-size: 24px;
   font-weight: normal;
-  line-height: 51px;
-  margin: 70px 0 0 0;
+  line-height: 34px;
+  width: 790px;
+  margin: 50px 0 0 0;
 }
 
-.feynman__link {
-  font-size: 36px;
+.khan__quote-author {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 30px 0 0 0;
+}
+
+.khan__quote-author-subline {
+  font-size: 24px;
   font-weight: normal;
-  line-height: 51px;
-  position: absolute;
-  top: 50%;
-  right: 48px;
+  line-height: 1.15;
+  margin: 10px 0 0 0;
+}
+
+.khan__book-container {
+  display: flex;
+  margin-top: 68px;
+  overflow: hidden;
+  height: 608px;
+}
+
+.khan__buy-link {
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 42px;
   cursor: pointer;
   text-decoration: none;
   color: #2f80ed;
+  margin-left: 48px;
 }
+
+.khan__book-pic {
+  width: 620px;
+  margin: 0;
+  align-self: start;
+}
+
 
 .kaufman {
   position: relative;
@@ -261,6 +407,26 @@
 
 .table__text_theme_dark {
   margin: 20px auto 0 auto;
+}
+
+.resources__logo-zone {
+  max-width: 1100px;
+  margin: 80px auto 217px auto;
+  padding: 0;
+
+}
+
+.resources__link {
+  display: inline-block;
+  width: 270px;
+  height: 38px;
+  list-style: none;
+  text-align: center;
+
+}
+
+.resources__logo {
+  height: 100%;
 }
 
 .footer {
