--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,6 @@
 .khan__book-pic {
   width: 620px;
-  margin: 0;
-  align-self: start;
+  height: 608px;
+  object-fit: cover;
+  object-position: top;
 }
